-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11.0.7
-
Component/s: hotspot
-
b04
-
b05
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8258577 | 11.0.11-oracle | Dukebot | P4 | Resolved | Fixed | b01 |
The backport of JDK-8237375 to OpenJDK 11 Updates contained a flaw which leads to loss of precision in timer value that is used to determine whether a counter decay is needed. This can lead to test failures.
- backported by
-
JDK-8258577 Loss of precision in counter decay calculation in 11u backport of JDK-8237375
-
- Resolved
-
- relates to
-
JDK-8237375 SimpleThresholdPolicy misses CounterDecay timestamp initialization
-
- Resolved
-
-
JDK-8239078 SimpleThresholdPolicy misses CounterDecay timestamp initialization
-
- Resolved
-