8239466: Loss of precision in counter decay calculation in 11u backport of JDK-8237375

Reviewed-by: mdoerr, simonis